# AITrace

./: .gitattributes  .gitignore  Dockerfile  README.md
at/: pyproject.toml  setup.py
at/src/: _client.py
at/src/at/: _client.py  cli.py
at/src/at/helper/: cli_helper.py
at/src/at/track/decorator/llm/: anthropic_tracker.py
at/src/models/: metadata.py
at/src/track/decorator/llm/: google_tracker.py
at/test/track/: base_track_test.py
backend/aitrace-java-backend/: README.md  build.gradle  settings.gradle
docker/: init.sql
docker/nginx/: nginx.conf
kubent/: .gitignore  README.md  pyproject.toml
kubent/src/: env.py
kubent/src/agent/: base.py  kubent.py  react.py  robin.py
kubent/src/api/: background_task.py  jwt.py
kubent/src/repository/: kubent_chat.py  kubent_chat_session.py  step.py  trace.py
kubent/src/service/: chat.py
kubent/src/utils/: mermaid.py
sdk/python/: README.md  pyproject.toml
src/: README.md  pyproject.toml
src/aitrace/: __init__.py  _exception.py  cli.py  logger.py
src/aitrace/client/: __init__.py  config.py  sync_client.py
src/aitrace/config/: __init__.py  configurator.py  configure.py  loader.py  types.py
src/aitrace/context/: __init__.py  storage.py
src/aitrace/core/: aitrace.py
src/aitrace/handler/: log_handler.py
src/aitrace/helper/: args_helper.py  id_helper.py  (+2 more)
src/docs/: version-log.md
src/mwin/: _client.py  cli.py
web/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+230 files in other folders)
