[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "at"
version = "0.1.0.beta"
description = "Track, log, and evaluate AI models. Supports OpenAI, Claude, Google API and custom Pytorch models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "openai>=1.108.2",
]
authors = [{name = "yanghui"}]

[project.urls]
Homepage = "https://github.com/yanghui1-arch/AT"

[project.scripts]
aitrace = "at.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"